# homelab

./: .gitignore  Makefile  README.md  inventory.yaml  pyproject.toml  requirements.yaml
kube/: README.md
kube/jellyfin/: jellyfin.container  jellyfin.kube  jellyfin.yml
kube/syncthing/: config.map  syncthing.kube  syncthing.yml
kube/transmission/: transmission.container
playbooks/: quadlet_init.yaml
roles/podman/files/: testing.list
roles/podman/handlers/: main.yml
roles/podman/tasks/: debian.yml  lingering.yml  main.yml
roles/podman/vars/: debian-12.yml  main.yml
tasks/: service.yml
vars/: pia.yaml  services.yml  share.yaml
